src/objects/Certification__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Certification</label>
    <nameField>
        <label>Certificate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>